# skc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
cmd/skc_init/: Cargo.toml
crates/skc-error/: Cargo.toml
crates/skc-error/src/: context.rs  error.rs  lib.rs  macros.rs
crates/skc-util/: Cargo.toml
crates/skc-util/src/: lib.rs
crates/skc-utils/: Cargo.toml
libs/skc_core/: Cargo.toml
skc/: Cargo.toml
src/: cli.rs  lib.rs
src/cmd/: init.rs
