[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["target/"]

[workspace.package]
authors = ["SkiteDB Team's"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
repository = "git@github.com:skite-db/skc.git"

[workspace.dependencies]
skc-utils = { path = "./crates/skc-utils" }

[package]
name = "skc"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = """
A command line tool for SkiteDB
"""

[lib]
name = "skc"
path = "./src/lib.rs"

[dependencies]

[build-dependencies]

[[bin]]
name = "skc"
path = "./src/main.rs"
