[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["target/"]

[workspace.package]
authors = ["SkiteDB Team's"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
repository = "git@github.com:skite-db/skc.git"

[workspace.dependencies]
skc-error = { path = "./crates/skc-error" }
skc-utils = { path = "./crates/skc-utils" }

[package]
name = "skc"
categories = ["database", "cli"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = """
A command line tool for SkiteDB
"""

[lib]
name = "skc"
path = "./src/lib.rs"

[dependencies]
skc-error = { workspace = true }
tokio = { version = "*", default-features = false, features = [
    "macros",
    "rt-multi-thread",
], optional =  true }
clap = { version = "*", features = ["derive"] }

[build-dependencies]

[[bin]]
name = "skc"
path = "./src/bin/main.rs"

[features]
default = ["runtime-tokio"]

runtime-tokio = ["dep:tokio"]
