[workspace]
resolver = "3"
members = ["skc", "libs/**"]

[workspace.package]
authors = ["SkiteDB Team's"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
repository = "git@github.com:skite-db/skc.git"

[workspace.dependencies]
## Commands
# skc_init = { path = "./libs/cmd/}

[profile.release]

[profile.dev]

[crates.io-patch]